--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Student Demo Website</title>
 </head>
 <body>
-    Hi! I am Rakshit Jain
+    <h1>Hi! I am Rakshit Jain
+        Currently working in TCS.</h1> 
 </body>
 </html>
