--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Student Demo Website</title>
 </head>
 <body>
-    <h1>Hi! I am Rakshit Jain
-        Currently working in TCS.</h1> 
+    <h1>Hi! I am Rakshit Jain. Currently workibg in TCS.</h1>
 </body>
 </html>
